Beregner fra ytelsevedtak ved KUN_YTELSE (#280)